--- a/app/src/main/res/layout/item_users.xml
+++ b/app/src/main/res/layout/item_users.xml
@@ -14,7 +14,7 @@
         app:cardUseCompatPadding="true">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/login_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
