--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.listUsers.UsersFragment">
+    tools:context=".ui.UsersFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
