--- a/app/src/main/res/layout/item_repos.xml
+++ b/app/src/main/res/layout/item_repos.xml
@@ -8,7 +8,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/material_card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:checkable="false"
         app:cardBackgroundColor="@color/teal_200"
         app:cardUseCompatPadding="true">
@@ -21,6 +21,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="4dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textSize="20sp" />
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
