--- a/app/src/main/res/layout/item_users.xml
+++ b/app/src/main/res/layout/item_users.xml
@@ -21,6 +21,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="4dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textSize="20sp" />
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
